fix(Button): Ensure button icon is legible even with user overrides

--- a/packages/style-stencila/src/atoms/button/index.css
+++ b/packages/style-stencila/src/atoms/button/index.css
@@ -59,7 +59,7 @@ a.button {
     &[disabled]:focus,
     &[disabled]:active,
     &[disabled]:hover {
-      @apply text-key;
+      color: var(--color-key, #000) !important;
       mix-blend-mode: soft-light;
       opacity: 0.65;
 
